--- a/ui-ngx/src/assets/locale/locale.constant-en_US.json
+++ b/ui-ngx/src/assets/locale/locale.constant-en_US.json
@@ -976,7 +976,7 @@
         "add-testing-text": "Add new",
         "credentials": "Credentials",
         "manage-credentials": "Manage credentials",
-        "delete": "Delete device",
+        "delete": "Delete testing",
         "assign-devices": "Assign devices",
         "assign-devices-text": "Assign { count, plural, 1 {1 device} other {# devices} } to customer",
         "delete-devices": "Delete devices",
@@ -1049,8 +1049,8 @@
         "device-configuration": "Device configuration",
         "transport-configuration": "Transport configuration",
         "wizard": {
-            "device-wizard": "Device Wizard",
-            "device-details": "Device details",
+            "testing-wizard": "Testing Wizard",
+            "testing-details": "Testing details",
             "new-device-profile": "Create new device profile",
             "existing-device-profile": "Select existing device profile",
             "specific-configuration": "Specific configuration",
